# whisper-live-audio-transcription

./: .gitignore  README.md  example.py  main.py  pyproject.toml  requirements.txt
src/transcribe/: main.py  settings.py
