[tool.poetry]
name = "context-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
setuptools-rust = "^1.8.1"
whispercpp = {git = "https://github.com/stlukey/whispercpp.py"}
speechrecognition = "^3.10.0"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
sounddevice = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
